// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputList should paste a text in inputList 1`] = `
<div>
  <div
    class="input-group-item input-list-root has-error"
  >
    <div
      class="form-control form-control-tag-group"
    >
      <input
        class="form-control-inset"
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      class="form-feedback-group"
    >
      <div
        class="form-feedback-item"
      >
        <span
          class="form-feedback-indicator"
        >
          <svg
            class="lexicon-icon lexicon-icon-info-circle icon-root icon-size-sm"
            role="presentation"
          >
            <use
              href="#info-circle"
            />
          </svg>
        </span>
        Error
      </div>
    </div>
  </div>
</div>
`;

exports[`InputList should render 1`] = `
<div>
  <div
    class="input-group-item input-list-root"
  >
    <div
      class="form-control form-control-tag-group"
    >
      <input
        class="form-control-inset"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputList should render as disabled 1`] = `
<div>
  <div
    class="input-group-item input-list-root disabled"
  >
    <div
      class="form-control form-control-tag-group"
    >
      <div
        class="label label-root label-secondary"
      >
        <span
          class="label-item"
        >
          one
        </span>
      </div>
      <div
        class="label label-root label-secondary"
      >
        <span
          class="label-item"
        >
          two
        </span>
      </div>
      <div
        class="label label-root label-secondary"
      >
        <span
          class="label-item"
        >
          three
        </span>
      </div>
      <input
        class="form-control-inset"
        disabled=""
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputList should render with an error message 1`] = `
<div>
  <div
    class="input-group-item input-list-root"
  >
    <div
      class="form-control form-control-tag-group"
    >
      <input
        class="form-control-inset"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputList should render with existing items 1`] = `
<div>
  <div
    class="input-group-item input-list-root"
  >
    <div
      class="form-control form-control-tag-group"
    >
      <div
        class="label label-root label-secondary label-dismissible"
      >
        <span
          class="label-item"
        >
          one
        </span>
        <span
          class="label-item label-item-after"
        >
          <button
            aria-label="Close"
            class="button-root close btn btn-secondary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times icon-root"
              role="presentation"
            >
              <use
                href="#times"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="label label-root label-secondary label-dismissible"
      >
        <span
          class="label-item"
        >
          two
        </span>
        <span
          class="label-item label-item-after"
        >
          <button
            aria-label="Close"
            class="button-root close btn btn-secondary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times icon-root"
              role="presentation"
            >
              <use
                href="#times"
              />
            </svg>
          </button>
        </span>
      </div>
      <input
        class="form-control-inset"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputList should render without an error message if no content 1`] = `
<div>
  <div
    class="input-group-item input-list-root"
  >
    <div
      class="form-control form-control-tag-group"
    >
      <input
        class="form-control-inset"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
